tests/errors/validation/attr-modifier-on-function.fn
---
Description: attr modifier applied to a function declaration
Expected: FN2005
---

type Holder
{
    attr fn BadModFn() -> i32
    {
        return 0
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
